FIX: YouTube thumbnails were cropped

--- a/assets/stylesheets/common/tc-message.scss
+++ b/assets/stylesheets/common/tc-message.scss
@@ -536,7 +536,10 @@
 
   img {
     grid-area: image;
-    max-height: 150px;
+
+    &:not(.ytp-thumbnail-image) {
+      max-height: 150px;
+    }
   }
 
   h3 a,
